--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -978,7 +978,7 @@ if (window.history.replaceState) {
     }
     
     // Toggle fraud filters visibility 
-    // just for git push
+    // just for git push 1
     function toggleFraudFilters() {
         const filterContent = document.getElementById('fraudFilterContent');
         const toggleIcon = document.getElementById('fraudFilterToggleIcon');
